fixing up spacing. where is my image??

--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ nav {
   display: flex;
   align-items: flex-end;
   justify-content: flex-start;
-  padding-left: 100px;
   font-family: 'Slabo 27px';
   font-size: 20px;
 }
 
 nav a:link, a:visited {
   color: #333745;
+  padding-left: 50px;
   text-decoration: none;
 }
 
@@ -37,7 +37,7 @@ nav a:hover {
 #title {
   color: #510D0A;
   font-size: 40px;
-  padding-left: 40px;
+  padding-left: 15px;
 }
 
 /* Trying to scale the cover right using concepts from https://developer.mozilla.org/en-US/docs/Web/CSS/background-size#Values */
@@ -45,14 +45,15 @@ nav a:hover {
   display: flex;
   background: url(cover2.jpg);
   background-size: cover;
-  height: 2000px;
+  height: 800px;
   flex-direction: column;
-  justify-content: flex-start;
-  align-content: center;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 30px;
 }
 
 .cover h1 {
-  font-size: 50px;
+  font-size: 70x;
   color: #F3B61F;
   font-family: 'Slabo 27px';
 }
@@ -63,7 +64,7 @@ input {
   box-sizing: border-box;
   padding: 8px 8px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  width: 500px;
+  width: 220px;
   font-family: 'Slabo 27px';
 }
 
@@ -71,7 +72,7 @@ button {
   background-color: #F03A47;
   border: none;
   border-radius: 4px;
-  width: 100px;
+  width: 60px;
   color: #ffffff;
   padding: 2px 2px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -98,8 +99,12 @@ footer {
   background-color: #510D0A;
   flex-direction: row;
   align-content: flex-start;
-  padding-top: 30px;
-  height: 400px;
+  padding-top: 80px;
+  height: 350px;
+}
+
+footer ul {
+  padding-left: 30px;
 }
 
 footer a:link, a:visited {
